4554.	[bug]		Remove double unlock in dns_dispatchmgr_setudp.
			[RT #44336]

4553.	[bug]		Named could deadlock there were multiple changes to
			NSEC/NSEC3 parameters for a zone being processed at
			the same time. [RT #42770]

4552.	[bug]		Named could trigger a assertion when sending notify
			messages. [RT #44019]

4551.	[test]		Add system tests for integrity checks of MX and
			SRV records. [RT #43953]

4550.	[cleanup]	Increased the number of available master file
			output style flags from 32 to 64. [RT #44043]

4547.	[port]		Add support for --enable-native-pkcs11 on the AEP
			Keyper HSM. [RT #42463]

	--- 9.11.1b1 released ---

4545.	[func]		Expand YAML output from dnstap-read to include
			a detailed breakdown of the DNS message contents.
			[RT #43642]

4544.	[bug]		Add message/payload size to dnstap-read YAML output.
			[RT #43622]

4543.	[bug]		dns_client_startupdate now delays sending the update
			request until isc_app_ctxrun has been called.
			[RT #43976]

4541.	[bug]		rndc addzone should properly reject non master/slave
			zones. [RT #43665]

4540.	[bug]		Correctly handle ecs entries in dns_acl_isinsecure.
			[RT #43601]

4539.	[bug]		Referencing a nonexistent zone with RPZ could lead
			to a assertion failure when configuring. [RT #43787]

4538.	[bug]		Call dns_client_startresolve from client->task.
			[RT #43896]

4537.	[bug]		Handle timeouts better in dig/host/nslookup. [RT #43576]

4536.	[bug]		ISC_SOCKEVENTATTR_USEMINMTU was not being cleared
			when reusing the event structure. [RT #43885]

4535.	[bug]		Address race condition in setting / testing of
			DNS_REQUEST_F_SENDING. [RT #43889]

4534.	[bug]		Only set RD, RA and CD in QUERY responses. [RT #43879]

4533.	[bug]		dns_client_update should terminate on prerequisite
			failures (NXDOMAIN, YXDOMAIN, NXRRSET, YXRRSET)
			and also on BADZONE.  [RT #43865]

4532.	[contrib]	Make gen-data-queryperf.py python 3 compatible.
			[RT #43836]
